# migration-lite-streamfield

./: .coveragerc  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  ruff.toml  testmanage.py  tox.ini
.github/workflows/: format.yml  mypy.yml  publish.yml  test.yml
mlstreamfield/: fields.py
tests/: test_field.py  test_migration_outcomes.py
tests/testapp/: apps.py  constants.py  models.py  settings.py  utils.py
tests/testapp/migrations/: 0001_initial.py  0002_create_test_objects.py  0003_swap_native_streamfield_for_mlstreamfield.py  0004_modify_body_values.py  0005_create_more_test_objects.py  0006_modify_body_values_with_bulk_update.py  0007_modify_title_values.py  0008_modify_title_values_with_bulk_update.py
